fix padding, alignment, margin & opacity of paragraph in work section

--- a/src/styles.css
+++ b/src/styles.css
@@ -272,10 +272,16 @@ a {
     margin-bottom: 0;
 }
 
+.section-heading--work {
+    margin-bottom: 1em;
+}
+
 
 
 .work-text {
     color: #FBFCFE;
+    opacity: 0.7;
+    line-height: 2em;
 
 }
 
